--- a/static/style.css
+++ b/static/style.css
@@ -1,61 +1,100 @@
 .container {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+   font-family: Arial, sans-serif;
+   background-color: #f4f4f9;
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+   align-items: center;
+   height: 100vh;
+   margin: 0;
 }
 
+
 .top {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    width: 100%;
-    margin-top: 50px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 20px;
+   width: 100%;
+   margin-top: 50px;
 }
+
 
 .input-container,
 .output-container {
-    flex-grow: 1;
-    max-width: 550px;
+   flex-grow: 1;
+   max-width: 550px;
 }
+
 
 button {
-    display: flex
-    justify-content: center;
-    align-items: center
-    color: black;
-    margin-top: 10px;
-    height: 50px;
-    gap: 20px;
-    width: 200px;
-    border: none;
-    background-color: #007bff;
-    cursor: pointer;
-    border-radius: 4px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   color: black;
+   margin-top: 10px;
+   height: 50px;
+   gap: 20px;
+   width: 200px;
+   border: none;
+   background-color: #007bff;
+   cursor: pointer;
+   border-radius: 4px;
 }
+
 
 .button-container {
-    margin-left: 20px;
-    width: auto;
+   margin-left: 20px;
+   width: auto;
 }
 
+
 button:hover {
-    background-color: #0056b3;
+   background-color: #0056b3;
 }
+
 
 textarea,
 .output-text {
-    width: 100%;
-    height: 200px;
-    border: 1px solid #ccc;
-    resize: none;
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 4px;
+   width: 100%;
+   height: 200px;
+   border: 1px solid #ccc;
+   resize: none;
+   padding: 10px;
+   font-size: 16px;
+   border-radius: 4px;
 }
 
+.bottom {
+   margin-top: 20px;
+   width: 80%;
+   display: flex;
+   justify-content: flex-start;
+}
+
+table {
+   width: 50%;
+   border-collapse: collapse;
+}
+
+th, td {
+   border: 1px solid #ddd;
+   padding: 8px;
+   text-align: left;
+}
+
+th {
+   background-color: #f2f2f2;
+}
+
+td:nth-child(1), th:nth-child(1) {
+    width: 2px;
+}
+
+td:nth-child(2), th:nth-child(2) {
+    width: 10px;
+}
+
+td:nth-child(3), th:nth-child(3) {
+    width: 2px;
+}
