--- a/static/style.css
+++ b/static/style.css
@@ -1,103 +1,106 @@
 .container {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f9;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
+    font-family: "TimesNewRoman", Times, serif;
+    background-color: #f4f4f9;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
 }
 
 .top {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  width: 100%;
-  margin-top: 50px;
-  margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 40px;
 }
 
 .input-container,
 .output-container {
-  flex-grow: 1;
-  max-width: 550px;
+    flex-grow: 1;
+    max-width: 550px;
 }
 
 button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: black;
-  margin-top: 10px;
-  height: 50px;
-  gap: 20px;
-  width: 200px;
-  border: none;
-  background-color: #007bff;
-  cursor: pointer;
-  border-radius: 4px;
+    font-family: "TimesNewRoman", Times, serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    margin-top: 10px;
+    height: 50px;
+    gap: 20px;
+    width: 200px;
+    border: none;
+    background-color: #007bff;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 30px;
 }
 
 .button-container {
-  margin-left: 20px;
-  width: auto;
+    margin-left: 20px;
+    width: auto;
 }
 
 button:hover {
-  background-color: #0056b3;
+    background-color: #0056b3;
 }
 
 textarea,
 .output-text {
-  width: 100%;
-  height: 200px;
-  border: 1px solid #ccc;
-  resize: none;
-  padding: 10px;
-  font-size: 16px;
-  border-radius: 4px;
+    width: 100%;
+    height: 200px;
+    border: 1px solid #ccc;
+    resize: none;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 4px;
 }
 
 .bottom {
-  margin-top: 20px;
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .table-container {
-  margin-left: 100px;
-  width: 100%;
-  margin-right: 20px;
+    margin-left: 100px;
+    width: 100%;
+    margin-right: 20px;
+    font-size: 20px;
 }
 
 table {
-  width: auto;
-  border-collapse: collapse;
+    width: auto;
+    border-collapse: collapse;
 }
 
 th, td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
 }
 
 th {
-  background-color: #f2f2f2;
+    background-color: #f2f2f2;
 }
 
 td:nth-child(1), th:nth-child(1) {
-  width: 20px;
+    width: 20px;
 }
 
 td:nth-child(2), th:nth-child(2) {
-  width: 500px;
+    width: 500px;
 }
 
 td:nth-child(3), th:nth-child(3) {
-  width: 20px;
+    width: 20px;
 }
 
 .table-container {
@@ -105,12 +108,19 @@ td:nth-child(3), th:nth-child(3) {
 }
 
 .score-container {
+    margin-right: 110px;
+    weight: 200px;
     flex-grow: 1;
-    margin-right: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     font-size: 60px;
 }
 
 .output-score {
     border: none;
     background: none;
+    font-size: 60px;
 }
+
